// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableRow should NOT have the pointer class if onClick is not specified 1`] = `
.emotion-3 {
  width: 100%;
  border-collapse: collapse;
  border: 1px solid #D3D4DD;
}

.emotion-0 {
  text-align: left;
  padding: 0 1rem;
  height: 2.5rem;
  border-bottom: 1px solid #D3D4DD;
}

<div>
  <table
    class="emotion-3"
  >
    <tbody
      class="emotion-1"
    >
      <tr
        class="emotion-1"
      >
        <td
          class="emotion-0"
        >
          Test
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TableRow should accept the style prop 1`] = `
.emotion-3 {
  width: 100%;
  border-collapse: collapse;
  border: 1px solid #D3D4DD;
}

.emotion-0 {
  text-align: left;
  padding: 0 1rem;
  height: 2.5rem;
  border-bottom: 1px solid #D3D4DD;
}

.emotion-1 {
  color: red;
}

<div>
  <table
    class="emotion-3"
  >
    <tbody
      class="emotion-2"
    >
      <tr
        class="emotion-1"
      >
        <td
          class="emotion-0"
        >
          Test
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TableRow should have the pointer class if onClick is specified 1`] = `
.emotion-3 {
  width: 100%;
  border-collapse: collapse;
  border: 1px solid #D3D4DD;
}

.emotion-0 {
  text-align: left;
  padding: 0 1rem;
  height: 2.5rem;
  border-bottom: 1px solid #D3D4DD;
}

.emotion-1 {
  cursor: pointer;
}

<div>
  <table
    class="emotion-3"
  >
    <tbody
      class="emotion-2"
    >
      <tr
        class="emotion-1"
      >
        <td
          class="emotion-0"
        >
          Test
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
